# TrabalhoPraticoProgram

./: CMakeLists.txt  RFID.ino  admin_menu.c  admin_menu.h  admin_setup.c  admin_setup.h  db_interaction.c  db_interaction.h  main.c  serial_communication.c  serial_communication.h  user_menu.c  user_menu.h
